Use class declared constructor (#4735)